Move weechat out of the root users jurisdiction

--- a/weechat/Dockerfile
+++ b/weechat/Dockerfile
@@ -4,8 +4,10 @@ MAINTAINER Charles Butler <chuck@dasroot.net>
 RUN apk add --update-cache weechat-dev openssl weechat \
   && rm -rf /var/cache/apk/*
 
-COPY entrypoint.sh /entrypoint.sh
+RUN adduser -D -g "" -s /bin/sh  weechat
 
+COPY entrypoint.sh /entrypoint.sh
+USER weechat
 EXPOSE 9001
 ENTRYPOINT ["/entrypoint.sh"]
 CMD weechat -r "/relay add ssl.weechat 9001; /set relay.network.password $PASSWORD" 
